[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/godux/nodes/management_panel.gd" type="Script" id=1]

[node name="ManagementPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
text = "Configuration"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 78.0
margin_bottom = 19.0
text = "Slices folder"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 82.0
margin_right = 969.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SlicesFolderSelectButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 973.0
margin_right = 1024.0
margin_bottom = 24.0
text = "Select"

[node name="SaveButton" type="Button" parent="VBoxContainer"]
margin_left = 491.0
margin_top = 46.0
margin_right = 532.0
margin_bottom = 66.0
size_flags_horizontal = 4
text = "Save"

[node name="SlicesFolderFileDialog" type="FileDialog" parent="."]
margin_left = 301.0
margin_top = 190.0
margin_right = 744.0
margin_bottom = 507.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open a Directory"
mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/SlicesFolderSelectButton" to="." method="_on_SlicesFolderSelectButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="dir_selected" from="SlicesFolderFileDialog" to="." method="_on_SlicesFolderFileDialog_dir_selected"]
